Button change in navigation menu from "Mon Portfolio" to "Vue de mon portfolio"

--- a/client/app/views/templates/home.jade
+++ b/client/app/views/templates/home.jade
@@ -21,7 +21,7 @@ div.container
             li.active
               a(href='#') Mon profil
             li
-              a(href='#portfolio') Mon Portfolio
+              a(href='#portfolio') Vue de mon Portfolio
             li
               a(href='#choices') Mes choix
             li
