--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -21,7 +21,7 @@ div.container(onload="init()")
             li
               a(href='#') Mon profil
             li
-              a(href='#portfolio') Mon Portfolio
+              a(href='#portfolio') Vue de mon Portfolio
             li
               a(href='#choices') Mes choix
             li.active
