--- a/client/app/views/templates/choices.jade
+++ b/client/app/views/templates/choices.jade
@@ -51,15 +51,39 @@ div.container
         div.docsContainer.col-md-12
     div.row#submitPart
       div.col-md-12.submitButton.text-center
-        button.btn.btn-primary#submitChanges(type="button", onclick="submitChanges()") Valider les changements
+        button.btn.btn-primary#submitChanges(onclick="submitChanges()") Valider les changements
         button.btn.btn-warning#syncDYBDocumentsButton(type="button", onclick="syncDYBDocuments()") Synchroniser mes documents DoYouBuzz
         div.alert.alert-success#savedMessage(hidden="true")
         div.alert.alert-danger#ErrorMessage(hidden="true")
     div.row#addDocumentPart
       div.row.text-left
         h3.col-md-12 Ajouter un document
-      div.documentBlock.col-md-6#addDocumentBlock
+      div.documentBlock.col-md-6#addDocumentBlock(style="display:none")
         div.documentContent.col-md-12#addDocumentContent
+          div.row
+            label Titre<span class="mandatoryStar">*</span> :
+            input#title(type="text", placeholder="Titre du document" name="title")
+          div.row
+            label URL :
+            input#url(type="text", placeholder="Url de votre document" name="url")
+          div.row
+            label Site web associé :
+            input#relatedWebste(type="text", placeholder="www.mywebsite.fr" name="relatedWebste")
+          div.row
+            label Catégorie<span class="mandatoryStar">*</span> :
+            input#category(type="text", placeholder="Sa catégorie" name="category")
+          div.row
+            label Date de réalisation<span class="mandatoryStar">*</span> :
+            input#creationDate(type="text", placeholder="jj/mm/aaaa" name="creationDate")
+          div.row
+            label Description<span class="mandatoryStar">*</span> :
+            textarea#description(style="resize:none;width:60%;height:100px;", placeholder="Description du document..." name="description")
+          div.row.text-center
+            button.btn.btn-primary#addDocumentButton Ajouter ce document
+            button.btn.btn-secondary#cancelButton(onclick="showAddDocumentForm(false)") Annuler
+      div.documentBlock.col-md-3#placeHolderAddDocumentBlock(onclick="showAddDocumentForm(true)")
+        div.documentContent.col-md-12#placeHolderAddDocumentContent
+          button#addButton +
         
       
 script(type="text/javascript").
@@ -106,6 +130,17 @@ script(type="text/javascript").
     xmlHttpUpdate.open( "PUT", "updateBadgesGroup", false ); // false for synchronous request
     xmlHttpUpdate.setRequestHeader("Content-type", "application/json");
     xmlHttpUpdate.send( JSON.stringify(badgesToSubmit) );
+  }
+  
+  function showAddDocumentForm(showFormAction){
+    if(showFormAction){
+      document.getElementById("placeHolderAddDocumentBlock").setAttribute("style", "display:none");
+      document.getElementById("addDocumentBlock").removeAttribute("style");
+      window.scrollTo(0,document.body.scrollHeight);
+    }else{
+      document.getElementById("addDocumentBlock").setAttribute("style", "display:none");
+      document.getElementById("placeHolderAddDocumentBlock").removeAttribute("style");
+    }
   }
   
   /**********************/
