--- a/client/app/views/templates/main.css
+++ b/client/app/views/templates/main.css
@@ -381,6 +381,61 @@ body{
 
 #addDocumentContent{
   box-shadow: 0px 0px 5px #999;
+  padding:10px;
+}
+
+#addDocumentPart label{
+  vertical-align: top;
+  width: 40%;
+  margin:10px 0px;
+}
+
+#addDocumentPart input{
+  margin:10px 0px;
+  width:60%;
+}
+
+#addDocumentButton{
+ margin-top:10px; 
+}
+
+#placeHolderAddDocumentBlock{
+  border:2px #888 dashed;
+  border-radius:10px;
+  cursor: pointer;
+  opacity: 0.65;
+  transition:opacity 0.2s;
+}
+
+#placeHolderAddDocumentContent{
+  box-shadow: none;
+  background: radial-gradient(rgba(230,230,230,1), rgba(255,255,255,0));
+  background: -webkit-radial-gradient(rgba(230,230,230,1), rgba(255,255,255,0));
+  min-height:100px;
+  height: 100px;
+}
+
+#addButton{
+  border-radius:58px;
+  width:58px;
+  height:58px;
+  display:block;
+  border:4px solid #888;
+  background-color: transparent;
+  color:#888;
+  font-size: 30px;
+  margin:auto;
+  margin-top:19px;
+}
+
+#cancelButton{
+  margin-top:10px;
+  margin-left: 10px;
+}
+
+#placeHolderAddDocumentBlock:hover{
+  opacity: 1;
+  transition:opacity 0.2s;
 }
 
 /***********************/
@@ -449,4 +504,10 @@ input.visibilityCheckBox[type="checkbox"] + label:hover::after{
 
 input.visibilityCheckBox[type="checkbox"]:checked + label:hover::after{
   content: "Enlever de mon portfolio";
+}
+
+/*Mandatory star for forms*/
+span.mandatoryStar{
+  vertical-align:super;
+  color:#e74c3c;
 }
