--- a/client/app/views/templates/main.css
+++ b/client/app/views/templates/main.css
@@ -341,7 +341,6 @@ body{
   left:-130px; 
 }
 
-
 #syncOBbutton{
   width:320px;
   clear:both;
@@ -506,8 +505,49 @@ input.visibilityCheckBox[type="checkbox"]:checked + label:hover::after{
   content: "Enlever de mon portfolio";
 }
 
+
 /*Mandatory star for forms*/
 span.mandatoryStar{
   vertical-align:super;
   color:#e74c3c;
+}
+
+
+/* Button to remove a document */
+div.removeButton{
+  border:3px solid #bbb;
+  width:27px;
+  height:27px;
+  background-color: #c0392b;
+  position: absolute;
+  top:0;
+  right:27px;
+  cursor: pointer;
+  transition: box-shadow 0.3s;
+}
+
+div.removeButton:hover{
+  box-shadow: 0px 0px 3px #333 inset;
+  transition: box-shadow 0.3s;
+}
+
+div.removeButton::before, div.removeButton::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    margin-top:-1px;
+    background: #bbb;;
+  }
+  
+div.removeButton::before {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+div.removeButton::after {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
